3.9/home/main.md
F3 supports both SQL and NoSQL databases off-the-shelf: MySQL, SQLite, MSSQL/Sybase, PostgreSQL, MongoDB and its own lightning fast Flat-File DB (we call it [Jig](jig)). It also comes with powerful object-relational mappers for data abstraction and modeling that are just as lightweight as the framework. No configuration needed.

F3 can also shield you from spam and DoS attacks, by performing DNSBL checks. It can increase your server health and uptime, by controlling web server traffic with profile analysis and bandwidth throttle.

That's not all. F3 is packaged with other optional plug-ins that extend its capabilities:

* Fast and clean template engine
* Unit testing toolkit
* Database-managed sessions
* Markdown-to-HTML converter
* Atom/RSS feed reader
* Image processor
* Geodata handler
* On-the-fly Javascript/CSS compressor
* OpenID (consumer)
* Custom logger
* Basket/Shopping cart
* Pingback server/consumer
* Unicode-aware string functions
* SMTP over SSL/TLS
* Tools for communicating with other servers
* Data Validation
* and [more Plugins from the F3-Community](development#user-plugins)

Unlike other frameworks, F3 aims to be usable - not usual.

The philosophy behind the framework and its approach to software architecture is towards minimalism in structural components, avoiding application complexity and striking a balance between code elegance, application performance and programmer productivity.

### Contribute

Join us on [GitHub](https://github.com/bcosca/fatfree) to make F3 even better.


### Mingle

Do you need some help for getting started? Or just want to share some thoughts? Meet other users
at the [F3 Google Group](https://groups.google.com/forum/#!forum/f3-framework)
and [Matrix](https://matrix.to/#/#fat-free-framework:matrix.org).


### Intro

Here is a [short video](https://youtu.be/EBYoyGOAcfo) that will give you a brief introduction to the framework:

<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/EBYoyGOAcfo?si=R4mdPH13LVLRU0Z1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>